# QEMU_an505

./: CMakeLists.txt  Makefile
common/: uart.c  uart.h
non_secure/: gcc_arm_ns.ld  main_ns.c  startup_ARMCM33_ns.c
secure/: gcc_arm.ld  main.c  partition_ARMCM33.h  startup_ARMCM33.c
